[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-driver-sglang"
version = "0.3.0"
description = "Pie driver — SGLang backend. Uses sglang's model definitions, attention kernels, and KV cache plumbing under pie's RPC surface."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "In Gim", email = "in.gim@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# SGLang 0.5.12 is the latest PyPI release as of 2026-05-21. It requires
# torch==2.11.0, torchao==0.17.0, transformers==5.6.0, and flashinfer
# 0.6.11.post1. Keep this driver in its own venv instead of co-installing
# it with the vLLM driver, whose latest release carries a different
# flashinfer pin.
dependencies = [
    # `pie-bridge` is the PyO3 wheel that ships the canonical wire schema,
    # Method enum, DriverCapabilities, and ShmemServer (single source of
    # truth, mirrored from Rust). Per-driver scaffolding lives under
    # `pie_driver_sglang._bridge` as a vendored copy of the legacy
    # `._bridge` Python.
    "pie-bridge",
    "pie-driver-dev",
    "msgpack>=0.5",
    "numba>=0.65",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "torchao==0.17.0",
    "sglang==0.5.12",
    "flashinfer-python==0.6.11.post1",
    "flashinfer-cubin==0.6.11.post1",
]

[tool.uv.sources]
pie-bridge = { path = "../bridge", editable = true }
pie-driver-dev = { path = "../dev", editable = true }

[tool.uv]
prerelease = "allow"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pie_driver_sglang", "pie_driver_sglang._bridge"]
