[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-driver-vllm"
version = "0.3.0"
description = "Pie driver — vLLM backend. Uses vllm's model definitions and kernels under pie's RPC surface."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "In Gim", email = "in.gim@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# vLLM 0.21.0 is the latest PyPI release as of 2026-05-21. It requires
# torch==2.11.0 and flashinfer 0.6.8.post1; keep this driver in its own
# venv instead of co-installing it with the SGLang driver, whose latest
# release carries a different flashinfer pin.
dependencies = [
    # `pie-bridge` is the PyO3 wheel that ships the canonical wire schema,
    # Method enum, DriverCapabilities, and ShmemServer (single source of
    # truth, mirrored from Rust). Per-driver scaffolding lives under
    # `pie_driver_vllm._bridge` as a vendored copy of the legacy
    # `._bridge` Python.
    "pie-bridge",
    "pie-driver-dev",
    "msgpack>=0.5",
    "ninja>=1.13",
    "numba>=0.65",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    # `psutil` is imported by `utils.get_available_memory` (RAM probe).
    "psutil>=5.9",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "vllm==0.21.0+cu129",
    "flashinfer-python==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu128"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[tool.uv.sources]
pie-bridge = { path = "../bridge", editable = true }
pie-driver-dev = { path = "../dev", editable = true }
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
vllm = { url = "https://github.com/vllm-project/vllm/releases/download/v0.21.0/vllm-0.21.0%2Bcu129-cp38-abi3-manylinux_2_34_x86_64.whl" }

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pie_driver_vllm", "pie_driver_vllm._bridge"]
