[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-driver-vllm"
version = "0.3.0"
description = "Pie driver - vLLM backend. Uses vllm's model definitions and kernels under pie's RPC surface."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "In Gim", email = "in.gim@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# vLLM 0.21.0 is the latest release verified in this repo's L40S
# environment. The PyPI wheel defaults to CUDA 13, so the driver pins
# vLLM's CUDA 12.9 release wheel explicitly; plain `vllm==0.21.0` will
# import but fail at runtime on CUDA 12.x drivers with a missing
# libcudart.so.13. The subprocess drivers are independent wheels -
# installing them into separate venvs is the supported path.
dependencies = [
    "pie-bridge",
    "pie-driver-dev",
    "msgpack>=0.5",
    "msgspec>=0.18",
    "ninja>=1.13",
    "numba>=0.65",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "psutil>=5.9",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "vllm @ https://github.com/vllm-project/vllm/releases/download/v0.21.0/vllm-0.21.0%2Bcu129-cp38-abi3-manylinux_2_34_x86_64.whl",
    "flashinfer-python==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
pie-bridge = { path = "../bridge", editable = true }
pie-driver-dev = { path = "../dev", editable = true }
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]

[tool.uv]
override-dependencies = [
    "llguidance>=1.3.0,<1.4.0",
    "xgrammar==0.2.1",
    "outlines-core==0.2.11",
    "outlines>=1.2.0,<1.3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pie_driver_vllm", "pie_driver_vllm._bridge"]
