[package]
name = "pie-weight-loader"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Typed weight-loading compiler for Pie runtimes."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"
links = "pie_weight_loader"

[lib]
name = "pie_weight_loader"
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.27"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
