[package]
name = "pie-driver-abi"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Canonical runtime↔driver ABI vocabulary for pie: direct local FFI descriptors, the generated C header, create-time capabilities JSON, and Rust-only transfer types."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

# `links = "pie_driver_abi"` lets downstream crates (e.g. `pie-worker`'s
# build.rs) discover the generated C header directory via the
# `DEP_PIE_DRIVER_ABI_INCLUDE` env var (build script ↔ build script handoff).
links = "pie_driver_abi"

[lib]
name = "pie_driver_abi"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
# `DriverCapabilities` (JSON handshake) + the transfer layout types are plain serde.
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.35", features = ["serde1"] }

[dev-dependencies]
serde_json = "1.0"
