[package]
name = "pie-plex"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Engine-neutral contract for the PLEX policy kernel"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie_plex"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
