[package]
name = "pie-plex"
version = "0.6.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Typed contract and validation model for PLEX policies"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie_plex"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
